--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "start": "nodemon --exec ts-node app.ts"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mysql2": "^3.14.1",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
