--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "type": "commonjs",
   "scripts": {
-    "start": "nodemon --exec ts-node app.ts"
+    "start": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.15.17",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
   }
 }
